# roark-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.yaml  roark-analytics-api-openapi.json
docs/: ApiResponse.md  CallAnalysisApi.md  CallAnalysisCreateRequest.md  CallAnalysisJob.md  CallData.md  CallDirection.md  CallEndedStatus.md  CallOperationsApi.md  CallParticipant.md  CallStatus.md  CallUploadResponse.md  CreateCallAnalysisJob201Response.md  CreateEvaluationJob201Response.md  CreateVapiCall201Response.md  ErrorResponse.md  ErrorType.md  EvaluationApi.md  EvaluationEvidence.md  EvaluationJobCreateRequest.md  EvaluationJobCreateRequestDataset.md  EvaluationJobCreateRequestEvaluators.md  EvaluationJobResponse.md  EvaluationJobStatus.md  EvaluationMetric.md  EvaluationRun.md  Evaluator.md  GetApiHealth200Response.md  GetCallEvaluationRuns200Response.md  GetCallSentimentAnalysis200Response.md  GetEvaluationJob200Response.md  GetEvaluationJob200ResponseAllOfData.md  GetEvaluationJobRuns200Response.md  GetEvaluationJobRuns200ResponseAllOfData.md  HealthApi.md  HealthResponse.md  HealthStatus.md  IntegrationsApi.md  InterfaceType.md  JobStatus.md  MetricRole.md  (+13 more)
src/apis/: call_analysis_api.rs  call_operations_api.rs  configuration.rs  evaluation_api.rs  health_api.rs  integrations_api.rs  mod.rs
src/models/: api_response.rs  call_analysis_create_request.rs  call_analysis_job.rs  call_data.rs  call_direction.rs  call_ended_status.rs  call_participant.rs  call_status.rs  call_upload_response.rs  create_call_analysis_job_201_response.rs  error_response.rs  mod.rs  (+37 more)
